--- a/app/src/main/res/menu/menu_item.xml
+++ b/app/src/main/res/menu/menu_item.xml
@@ -69,7 +69,7 @@
     <item
         android:id="@+id/action_contact"
         android:orderInCategory="100"
-        android:title="Contact US"
+        android:title="Contact Us"
         app:showAsAction="never" />
 
     <item
